--- a/Homepage.html
+++ b/Homepage.html
@@ -1,8 +1,15 @@
 <html>
 <head><<title>HomePage</title></head>
 <body>
+  <nav>Home>
+    <a href='#'> Home | </a>
+    <a href='#'> About | </a>
+    <a href='#'> Contact | </a>
+    <a href='#'> Sponsor | </a>
+  </nav>
 <h1>Hi</h1>
 <p>Welcome to first line in first commit</p>
-<p>Yeah</p>
+  <p>Yeah</p>
+  <p>Changes made in sponsor branch</p>
 </body>
 </html>
